--- a/moovsmart/src/app/components/property-list/property-list.component.html
+++ b/moovsmart/src/app/components/property-list/property-list.component.html
@@ -71,8 +71,6 @@
 </div>
 
 <div class="container jumbotron">
-
-
     <div class="row">
         <div class="col">
             <h2>Eladó ingatlanok</h2>
@@ -94,7 +92,8 @@
         <thead>
         </thead>
         <tbody>
-            <tr *ngFor="let property of propertyListItemModels" id="mainRow">
+            <div id="table-row" *ngFor="let property of propertyListItemModels" id="mainRow">
+            <tr>
                 <td>
                     <div *ngIf="property?.imageUrl[0].length < 3">
                         <img [src]="defaultPicture" class="defaultPicture">
@@ -104,7 +103,7 @@
                              src="{{property?.imageUrl[0]}}"/>
                     </div>
                 </td>
-                <td>
+                <td id="property-name-td">
                     <h3>{{property.name}}</h3>
                     <p><strong>Szobák száma: </strong> {{property.numberOfRooms}}</p>
                     <p><strong>Ár: </strong> {{property.price}}</p>
@@ -112,10 +111,12 @@
                 <td></td>
                 <td>Ingatlan regisztráció dátum:</td>
                 <td></td>
+                <td></td>
                 <td class="btn-group">
                         <button id="detail-button" class="btn" (click)="details(property.id)">Részletek</button>
                 </td>
-            </tr>
+            </tr></div>
         </tbody>
+
     </table>
 </div>
