--- a/moovsmart/src/app/components/property-details/property-details.component.html
+++ b/moovsmart/src/app/components/property-details/property-details.component.html
@@ -106,7 +106,7 @@
     </div>
     <div id="bottom-div">
 
-        <button *ngIf="reagistratedUser" type="button" class="btn btn-info" (click)="delete(propertyDetails.id)">
+        <button *ngIf="reagistratedUser" type="button" class="btn btn-danger" (click)="delete(propertyDetails.id)">
             Törlés <i class="far fa-trash-alt"></i></button>
     </div>
 </div>
