--- a/moovsmart/src/app/components/property-form/property-form.component.html
+++ b/moovsmart/src/app/components/property-form/property-form.component.html
@@ -349,7 +349,7 @@
             </small>
         </div>
         <button type="submit" class="btn btn-primary my-buttons" [disabled]="propertyForm.invalid">Mentés</button>
-        <button class="btn-secondary" id="pictureDeleteButton" (click)="deletePicture()">Kép törlése</button>
+        <button type="button" class="btn btn-danger" id="pictureDeleteButton" (click)="deletePicture()">Kép törlése</button>
   </form>
 </div>
 
