--- a/moovsmart/src/app/components/property-form/property-form.component.css
+++ b/moovsmart/src/app/components/property-form/property-form.component.css
@@ -1,7 +1,22 @@
-#error-message{
+#error-message {
     color: red;
 }
 
 #pictureDeleteButton {
-margin-left: 50px;
+    background-color: #E7717D;
+    color: white;
+    margin-left: 50px;
+}
+
+#saveButton {
+    background-color: #7E685A;
+    color: white;
+}
+
+#loadingCircle {
+    position:fixed;
+    top: 50%;
+    left: 50%;
+    height: 80px;
+    width: 80px;
 }
