--- a/moovsmart/src/app/components/property-list/property-list.component.html
+++ b/moovsmart/src/app/components/property-list/property-list.component.html
@@ -110,7 +110,7 @@
                         <p><strong>Szobák száma: </strong> {{property.numberOfRooms}}</p>
                         <p><strong>Ár: </strong> {{property.price}}</p>
                     </td>
-                    <td><strong>Terület:</strong> {{property.area}}m2</td>
+                    <td><strong>Terület:</strong> {{property.area}}m<sup>2</sup></td>
                     <td><strong>Hirdetés dátuma:</strong></td>
                     <td>{{property.time}}</td>
                     <td></td>
