--- a/moovsmart/src/app/components/profil-list/profil-list.component.css
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.css
@@ -11,5 +11,18 @@
     background-color: #7E685A;
     color: white;
     width: 150px;
+
+}
+
+#button-container {
+    left: calc(90% - 150px);
+    position: absolute;
+}
+
+.defaultPicture {
+    width: 100%;
+    max-width: 200px;
+    height: 100%;
+    max-height: 150px;
 }
 
