--- a/moovsmart/src/app/components/property-list/property-list.component.html
+++ b/moovsmart/src/app/components/property-list/property-list.component.html
@@ -97,10 +97,10 @@
             <div *ngFor="let property of actualPageList[actualPageNumber-1]" id="mainRow">
                 <tr>
                     <td>
-                        <div *ngIf="property?.imageUrl[0].length < 3">
+                        <div *ngIf="property?.imageUrl[0]?.length < 3">
                             <img [src]="defaultPicture" class="defaultPicture" [alt]="defaultPicture">
                         </div>
-                        <div *ngIf="property.imageUrl">
+                        <div *ngIf="property?.imageUrl[0]?.length >= 3">
                             <img (click)="details(property.id)" alt="ingatlan" class="room-list-item__image" width="200"
                                  src="{{property?.imageUrl[0]}}"/>
                         </div>
