--- a/moovsmart/src/app/components/welcome/welcome.component.html
+++ b/moovsmart/src/app/components/welcome/welcome.component.html
@@ -21,13 +21,13 @@
             </div>
 
             <div id="right-img-holder">
-                <a routerLink="/registration">
+                <a routerLink="/signin">
                     <img src="assets/img/registrating.jpg" alt="picture" class="img-link-surfing"></a>
                 <p><a routerLink="/signin"><strong>Ingatlant szeretnék regisztrálni</strong></a></p>
             </div>
 
             <div id="mid-img-holder">
-                <a routerLink="/registration">
+                <a routerLink="/signin">
                     <img src="assets/img/online_aukcio.jpg" alt="picture" class="img-link-surfing"></a>
                 <p><a routerLink="/signin"><strong>Ingatlanra akarok licitálni</strong></a></p>
             </div>
