--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -7,7 +7,7 @@
                 <div *ngFor="let property of propertyListItemModels" id="mainRow">
                     <tr>
                         <td>
-                            <div *ngIf="property?.imageUrl[0].length < 3">
+                            <div *ngIf="property?.imageUrl[0]?.length < 3">
                                 <img [src]="defaultPicture" class="defaultPicture" [alt]="defaultPicture">
                             </div>
                             <div *ngIf="property.imageUrl">
@@ -19,7 +19,7 @@
                         <td id="property-name-td">
                             <h3>{{property.name}}</h3>
                             <p><strong>Szobák száma: </strong> {{property.numberOfRooms}}</p>
-                            <p><strong>Ár: </strong> {{property.price}}</p>
+                            <p><strong>Ár: </strong> {{property.price}}M Ft</p>
                         </td>
                         <td><strong>Terület:</strong> {{property.area}}m2</td>
                         <td><strong>Hirdetés dátuma:</strong></td>
