--- a/moovsmart/src/app/components/property-details/property-details.component.html
+++ b/moovsmart/src/app/components/property-details/property-details.component.html
@@ -29,10 +29,9 @@
 
         <div class="row">
             <div class="col">
-            <h4><strong>Ingatlan bemutatása</strong></h4></div>
+            <h5><strong>Ingatlan bemutatása</strong></h5></div>
             <div class="col"></div>
-            <div class="col"></div>
-            <div class="col">
+            <div class="col" id="col-button">
                 <button *ngIf="reagistratedUser" type="button" class="btn btn-secondary" (click)="edit(propertyDetails.id)">
                     Szerkesztés <i class="fas fa-pencil-alt"></i></button>
             </div>
