--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -7,7 +7,7 @@
                 <div *ngFor="let property of propertyListItemModels" id="mainRow">
                     <tr>
                         <td>
-                            <div *ngIf="property?.imageUrl[0].length < 3">
+                            <div *ngIf="property?.imageUrl[0]?.length < 3">
                                 <img [src]="defaultPicture" class="defaultPicture" [alt]="defaultPicture">
                             </div>
                             <div *ngIf="property.imageUrl">
