--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -1,4 +1,5 @@
 <div class="container jumbotron">
+    <div><button class="btn btn-info" id="button-new">Új ingatlan létrehozása</button></div>
     <div>
         <table *ngIf="propertyListItemModels?.length !== 0" id="list-table" class="table table-borderless">
             <thead>
