--- a/moovsmart/src/app/components/property-details/property-details.component.html
+++ b/moovsmart/src/app/components/property-details/property-details.component.html
@@ -59,7 +59,7 @@
                 <strong>Szobák száma:</strong> {{propertyDetails?.numberOfRooms}}
             </div>
             <div class="col">
-                <strong>Ár:</strong> {{propertyDetails?.price}}
+                <strong>Ár:</strong> {{propertyDetails?.price}} M Ft
             </div>
         </div>
         <div class="row" id="details-div">
