--- a/moovsmart/src/app/components/property-list/property-list.component.html
+++ b/moovsmart/src/app/components/property-list/property-list.component.html
@@ -106,16 +106,19 @@
                         </div>
                     </td>
                     <td id="property-name-td">
-                        <h3>{{property.name}}</h3>
+                        <h5>{{property.name}}</h5>
                         <p><strong>Szobák száma: </strong> {{property.numberOfRooms}}</p>
                         <p><strong>Ár: </strong> {{property.price}} M Ft</p>
                     </td>
                     <td><strong>Terület:</strong> {{property.area}}m<sup>2</sup></td>
                     <td><strong>Hirdetés dátuma:</strong></td>
                     <td>{{property.time}}</td>
-                    <td></td>
+                    <!--td></td-->
                     <td class="btn-group">
                         <button id="detail-button" class="btn" (click)="details(property.id)">Részletek</button>
+                    </td>
+                    <td *ngIf="storage?.userId == property.userId">
+                        <i class="fas fa-wrench"></i>
                     </td>
                 </tr>
             </div>
