--- a/moovsmart/src/app/components/profil-list/profil-list.component.css
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.css
@@ -1,3 +1,13 @@
+#header-div{
+    text-align: center;
+}
+hr{
+    max-width: 75%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #mainRow {
     border-width: 3px;
     border-style: solid;
