start admin interface html, css

--- a/moovsmart/src/app/components/admin/admin.component.html
+++ b/moovsmart/src/app/components/admin/admin.component.html
@@ -1,1 +1,13 @@
-<p>admin works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <button type="button" class="btn approval" (click)="moveToApproval()">Ingatlan jóváhagyása</button>
+        </div>
+        <div class="col-sm-4">
+            <button type="button" class="btn userHandling" (click)="moveToUserHandling()">Felhasználók kezelése</button>
+        </div>
+        <div class="col-sm-4">
+            <button type="button" class="btn archiveList" (click)="moveToArchived()">Archivált ingatlanok listája</button>
+        </div>
+</div>
+</div>
