start admin interface html, css, js, java

--- a/moovsmart/src/app/components/admin/admin.component.html
+++ b/moovsmart/src/app/components/admin/admin.component.html
@@ -7,7 +7,81 @@
             <button type="button" class="btn userHandling" (click)="moveToUserHandling()">Felhasználók kezelése</button>
         </div>
         <div class="col-sm-4">
-            <button type="button" class="btn archiveList" (click)="moveToArchived()">Archivált ingatlanok listája</button>
+            <button type="button" class="btn archiveList" (click)="moveToArchived()">Archivált ingatlanok listája
+            </button>
         </div>
-</div>
+    </div>
+    <div class="container">
+        <div *ngIf="buttonPushed === 1" id="header-div">
+            <h3>Jóváhagyásra váró ingatlanok</h3>
+            <hr>
+            <div id="mainDiv">
+                <div *ngIf="propertyListItemModels === undefined || propertyListItemModels.length === 0" id="emptydb">
+                    <div id="emptydbmessage">Jelenleg nincs jóváhagyásra váró ingatlan.</div>
+                </div>
+            </div>
+        </div>
+        <div *ngIf="buttonPushed === 1 || buttonPushed === 3">
+            <div *ngIf="propertyListItemModels !== undefined && propertyListItemModels.length > 0">
+
+                <!-- Property list -->
+
+                <div *ngFor="let property of actualPageList[actualPageNumber-1]" class="mainRow">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-sm-3" id="img-holder-row">
+                                <div *ngIf="property?.imageUrl[0]?.length < 3">
+                                    <img [src]="defaultPicture" class="defaultPicture" [alt]="defaultPicture">
+                                </div>
+                                <div *ngIf="property?.imageUrl[0]?.length >= 3">
+                                    <img (click)="details(property.id)" alt="ingatlan" width="200"
+                                         src="{{property?.imageUrl[0]}}"/>
+                                </div>
+                            </div>
+                            <div class="col-sm-9">
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <h5>{{property.name}}</h5>
+                                        <div id="area-div"><strong>Terület</strong>: {{property.area}} m<sup>2</sup>
+                                        </div>
+                                        <div id="price-div"><strong>Ár</strong>: {{property.price}} M ft</div>
+                                    </div>
+                                    <div class="col-sm">
+                                        <div>
+                                            <strong>Szobák száma</strong>: {{property.numberOfRooms}}
+                                        </div>
+                                    </div>
+                                    <div class="col-sm">
+                                        <div id="detail-button-div" class="d-flex justify-content-center">
+                                            <div>
+                                                <button id="detail-button" class="btn" (click)="details(property.id)">
+                                                    Részletek
+                                                </button>
+                                            </div>
+                                        </div>
+                                        <div id="date-div">
+                                            <strong>Regisztráció: </strong>{{property.time}}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="pager" class="d-flex justify-content-center">
+                    <div id="leftArrow" *ngIf="actualPageNumber > 1" (click)="pageLeft()" title="lapozz">
+                        <i class="fas fa-angle-left"></i>
+                    </div>
+                    <div id="pagerNumbers">
+                        <strong> {{actualPageNumber}} </strong>
+                    </div>
+                    <div id="rightArrow" *ngIf="actualPageNumber < actualPageList?.length" (click)="pageRight()"
+                         title="lapozz">
+                        <i class="fas fa-angle-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
