--- a/moovsmart/src/app/components/admin/admin.component.css
+++ b/moovsmart/src/app/components/admin/admin.component.css
@@ -12,3 +12,44 @@
     background-color: #7E685A;
     color: white;
 }
+
+#emptydbmessage {
+    position: absolute;
+    font-size: 20px;
+    font-weight: bold;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#header-div {
+    margin: 20px;
+}
+
+.defaultPicture {
+    width: 100%;
+    max-width: 200px;
+    height: 100%;
+    max-height: 150px;
+}
+
+#detail-button {
+    background-color: #7E685A;
+    color: white;
+    width: 150px;
+}
+
+#img-holder-row{
+    text-align: center;
+    background-color:  antiquewhite;
+    padding: 3px;
+}
+
+.mainRow{
+    border-width:3px;
+    border-style:solid;
+    border-color: #C2B9B0;
+    background-color: white;
+    padding: 2%;
+}
+
